tela de inicio ajustada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TeleconsultorApp</string>
+    <string name="app_name">Teleconsultoriast</string>
 
 
     <!-- Strings related to login -->
