--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string-array name="tipo_user">
         <item>Agente de Saúde</item>
         <item>Especialista</item>
-        <item>Paciente</item>
+
     </string-array>
 
     <string-array name="tipo_profis_especial">
@@ -164,11 +164,10 @@
 
 
     <!--Strings relativas a tela de rotas -->
+    <string name="title_activity_rota">Localize Unidades</string>
+    <string name="title_home_rota">Unidades</string>
+    <string name="title_ver_rota">Visualizar Rota</string>
 
-    <string name="title_activity_rota">Rotas</string>
-    <string name="title_home_rota">Rotas Realizadas</string>
-    <string name="title_dashboard_rota">Visualizar Rota</string>
-    <string name="title_notifications_rota">Alertas</string>
 
     <!--Strings relativas a tela de mapa -->
     <string name="title_activity_maps">Veja o Melhor Caminho</string>
@@ -182,7 +181,20 @@
     <string name="edit_info">Editar Dados</string>
     <string name="change_password">Trocar Senha</string>
 
+    <string name="alertas_activity_notification_title_template">Alertas activity: %1$s</string>
 
+    <!-- TODO: remove this placeholder text -->
+    <string name="alertas_activity_notification_placeholder_text_template">You said %1$s and lorem
+        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
+        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
+        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
+        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
+        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
+        tortor.
+    </string>
+
+    <string name="action_share">Share</string>
+    <string name="action_reply">Reply</string>
 
 
 </resources>
