--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,11 @@
 
     <string name="action_settings">Oções</string>
 
-    <!-- Strings relativas a Novo Usuario -->
+    <string name="pop_newU_title">Qual é o Seu Perfil?"</string>
+    <string name="pop_newU_sub">Escolha abaixo o tipo do seu perfil profissional</string>
+
+
+    <!-- Strings relativas a Novo Agente -->
     <string name="full_name">Nome Completo</string>
     <string name="cpf">CPF - Apenas Números</string>
     <string name="prof">Profissão</string>
@@ -49,7 +53,7 @@
     <string-array name="tipo_user">
         <item>Agente de Saúde</item>
         <item>Especialista</item>
-
+        <item>Paciente</item>
     </string-array>
 
     <string-array name="tipo_profis_especial">
