--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,16 @@
 <resources>
-    <string name="app_name">Teleconsultoria</string>
+    <string name="app_name">Teleconsultor</string>
 
     <!-- Main -->
     <string name="title_in">Teleconsultoria e Diagnóstico</string>
-    <string name="acesse">Acesse sua conta</string>
-    <string name="criar">Criar conta</string>
-    <string name="encontre">Unidades de Atendimento</string>
+    <string name="acesse">Acessar</string>
+    <string name="find">Clínicas</string>
+    <string name="atPrim">Atenção Primária</string>
     <string name="saude_wo">Saúde da Mulher</string>
     <string name="saude_bb">Saúde da Criança</string>
     <string name="saude_vo">Saúde do Idoso</string>
 
-    <!-- Strings related to login -->
+    <!-- Strings related to login sccreen-->
     <string name="title_activity_user_login">Acesse sua Conta</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Senha </string>
@@ -21,21 +21,22 @@
     <string name="error_incorrect_password">Senha Incorreta</string>
     <string name="error_field_required">Preencha este campo</string>
     <string name="permission_rationale">É necessário conceder permissão de acesso aos contatos</string>
-    <string name="forgot_password">Esqueci minha senha</string>
-    <string name="acess_count">Acessar</string>
-    <string name="create_count">Criar</string>
-    <string name="primSoc">Primeiros Socorros</string>
+    <string name="forgot_password">Esqueci minha Senha/Email</string>
+    <string name="create_account">CADASTRE-SE </string>
+    <string name="pop_newU_title">Qual é o Seu Perfil?"</string>
+    <string name="pop_newU_sub">Escolha abaixo o tipo do seu perfil profissional</string>
+    <string name="title_new_agente">Novo Agente</string>
+    <string name="title_new_esp">Novo Especialista</string>
+    <string name="recupera_senha">Recuperar sua Senha/Email</string>
+    <string name="hint_recupera_senha">Insira o CPF cadastrado</string>
+    <string name="btn_enviar">ENVIAR</string>
+    <string name="btn_cancela">CANCELAR</string>
+
 
     <string name="action_settings">Oções</string>
 
-    <string name="pop_newU_title">Qual é o Seu Perfil?"</string>
-    <string name="pop_newU_sub">Escolha abaixo o tipo do seu perfil profissional</string>
 
-    <string name="title_new_agente">Novo Agente</string>
-    <string name="title_new_esp">Novo Especialista</string>
-
-
-    <!-- Strings relativas a Novo Usuario -->
+    <!-- Strings related a Novo Usuario -->
     <string name="full_name">Nome Completo</string>
     <string name="cpf">CPF - Apenas Números</string>
     <string name="prof">Profissão</string>
@@ -49,30 +50,16 @@
     <string name="orgao_reg">Órgão e UF do Registro </string>
     <string name="unidade">Unidade de Atendimento</string>
     <string name="tx_cv">Insira seu Curriculo</string>
-    <string name="btn_save">Salvar Conta</string>
+    <string name="btn_save">SALVAR</string>
+
 
     <!--Novo Agente -->
     <string-array name="tipo_profis_agente">
         <item>Sua profissão é:</item>
         <item>Enfermagem</item>
         <item>Tecnico de Enfermagem</item>
-        <item>Estagiário</item>
         <item>Agente Comunitário de Saúde</item>
         <item>Auxiliar de Enfermagem</item>
-    </string-array>
-
-
-    <string-array name="uni_atendimento">
-        <item>Unidade de atendimento:</item>
-        <item>Freguesia</item>
-        <item>Taquara</item>
-        <item>Curicica</item>
-        <item>General Osório</item>
-        <item>Recreio</item>
-        <item>Laranjeiras</item>
-        <item>Santa Cruz</item>
-        <item>Sacadura</item>
-        <item>Caju</item>
     </string-array>
 
 
@@ -84,12 +71,21 @@
         <item>Neurologia</item>
         <item>Dermatologia</item>
         <item>Clinica Geral</item>
-        <item>Gastroenterolgia</item>
-        <item>Otorrinolaringologia</item>
         <item>Odontologia Geral</item>
         <item>Ortodontia</item>
         <item>Periodontia</item>
     </string-array>
+
+
+    <string-array name="uni_atendimento">
+        <item>Unidade de atendimento:</item>
+        <item>Freguesia</item>
+        <item>Curicica</item>
+        <item>Laranjeiras</item>
+        <item>Santa Cruz</item>
+        <item>Linópolis</item>
+    </string-array>
+
 
     <!--Strings relativas a nav_header-->
     <string name="nome_usuario">Nome do Usuario - Recuperar do BD</string>
@@ -102,34 +98,42 @@
     <string name="drawer_logout">Fazer logout desta conta</string>
 
     <!--Strings relativas ao content_dashboard-->
-    <string name="consulta">Minhas Consultas</string>
+    <string name="consulta">Ver Arquivos</string>
     <string name="new_check">Nova Consulta</string>
     <string name="title_activity_user__dashboard">Área de Trabalho</string>
     <string name="navigation_drawer_open">Abrir drawer</string>
     <string name="navigation_drawer_close">Fechar drawer</string>
-    <string name="rotas">Verificar Rotas</string>
+    <string name="diagn">Novo Diagnóstico</string>
     <string name="relatorio">Relatórios</string>
 
     <!--Strings relativas ao content_nova Consulta-->
     <string name="title_activity_nova_consulta">Nova Consulta</string>
     <string name="ncons">Realize uma Nova Consulta</string>
-    <string name="usuario">Nome do usuario - recupera banco</string>
-    <string name="id">Id da consulta - autoincrement banco</string>
-    <string name="save">Salvar Consulta</string>
+    <string name="nm_paciente">Nome completo do paciente</string>
+    <string name="cpf_pac">CPF do paciente - Apenas numeros</string>
+    <string name="data_nasc">Data de nascimento do paciente</string>
+    <string name="save">Salvar e Enviar</string>
+    <string name="nvConsul_fill">*Preencher os campos abaixo se houver prontuário</string>
+    <string name="descreva_caso">Descreva o caso da melhor forma possível</string>
 
+
+    <!-- Strings relativas ao content novo diagnostico -->
+    <string name="nu_prontuario">Numero do prontuário</string>
+    <string name="anex_exam">Anexar Exames/Prontuário</string>
+    <string name="btn_sol_diagn">e-DIAGNÓSTICO</string>
+
+
+<!-- spinners -->
     <string-array name="spGenero">
-        <item>Genero</item>
+        <item>Genero do paciente:</item>
         <item>Feminino</item>
         <item>Masculino</item>
     </string-array>
 
-    <string-array name="spRegiao">
-        <item>Região de Atendimento</item>
-        <item>Grande Rio</item>
-        <item>Zona Oeste</item>
-        <item>Zona Norte</item>
-        <item>Zona Sul</item>
-        <item>Ilha do Governador</item>
+    <string-array name="spRegiaoNucleo">
+        <item>Núcleo de Atendimento:</item>
+        <item>Rio de Janeiro</item>
+        <item>Baixada Fluminense</item>
     </string-array>
 
     <string-array name="spDuvida">
@@ -142,43 +146,37 @@
         <item>Outros</item>
     </string-array>
 
-    <string-array name="spArea">
-        <item>Qual sua área?</item>
+    <string-array name="spAreaConsulta">
+        <item>Especialidade:</item>
+        <item>Enfermagem</item>
         <item>Clinica Geral</item>
         <item>Cardiologia</item>
         <item>Pre-natal</item>
-        <item>Neurologia</item>
         <item>Ortopedia</item>
-        <item>Gastroenterolgia</item>
         <item>Dermatologia</item>
-        <item>Otorrinolaringologia</item>
         <item>Odontologia</item>
-        <item>Não sei</item>
+        <item>Outros</item>
     </string-array>
 
-
     <!--Strings relativas ao ListView de consultas-->
-    <string name="title_activity_consult_list_view">Lista de Consultas</string>
-    <string name="title_home">Consultas em Aberto</string>
-    <string name="title_dashboard">Consultas Analisadas</string>
+    <string name="title_activity_consult_list_view">Lista de Arquivos</string>
+    <string name="title_consult_navigation">Consultas</string>
+    <string name="title_diagn_navigation">Diagnósticos</string>
+    <string name="title_activity_lista_arquivos">Lista de Arquivos</string>
 
 
-
-    <!--Strings relativas a tela de rotas -->
+    <!--Strings relativas a tela de localizar clinicas -->
     <string name="title_activity_rota">Localize Unidades</string>
     <string name="title_home_rota">Unidades</string>
-    <string name="title_ver_rota">Visualizar Rota</string>
 
-
-    <!--Strings relativas a tela de mapa -->
-    <string name="title_activity_maps">Veja o Melhor Caminho</string>
 
     <!--String relativas à tela de relatorios -->
+    <string name="title1">Índices desta Conta</string>
     <string name="act_rel_title">Relatorios</string>
-    <string name="concluidas">CONSULTAS CONCLUÍDAS</string>
+    <string name="concluidas">CONSULTAS ENCERRADAS</string>
     <string name="abertas">CONSULTAS EM ABERTO</string>
-    <string name="exames">ENCAMINHAMENTOS</string>
-    <string name="aguardando">CONSULTAS AGUARDANDO PARECER ESPECIALISTA</string>
+    <string name="exames">DIAGNÓSTICOS SOLICITADOS</string>
+    <string name="aguardando">DIAGNÓSTICOS RESPONDIDOS</string>
 
 
     <!-- String relativas a tela de usuario logado -->
@@ -192,6 +190,9 @@
 
     <string name="action_share">Share</string>
     <string name="action_reply">Reply</string>
+
+    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_novo_diagnostico">NovoDiagnostico</string>
 
 
 </resources>
