atualização de permissões e amostragem de consulta por perfil.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="suporte">Suporte Online</string>
 
     <!-- Strings related to login sccreen-->
+    <string name="consultas">Consultas e Diagnósticos</string>
     <string name="title_activity_user_login">Acesse sua Conta</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Senha </string>
